--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -8,7 +8,7 @@
 }
 
 .photo {
-  margin: 40px 20px 0;
+  margin: 40px 0 0;
 }
 
 .photo__title-description {
@@ -25,6 +25,11 @@
   padding-top: 57px;
   margin: 0;
   box-sizing: border-box;
+}
+
+.photo__view {
+  border-top: 1px solid #d6d6d6;
+  padding-top: 23px;
 }
 
 @media (min-width: @tablet-width) {
@@ -45,6 +50,11 @@
   .photo {
     margin-left: 60px;
     margin-right: 60px;
+  }
+
+  .photo__view {
+    border-top: none;
+    padding-top: 0;
   }
 }
 
