--- a/source/less/style.less
+++ b/source/less/style.less
@@ -31,6 +31,8 @@
 @import "blocks/photo-view.less";
 @import "blocks/point-list.less";
 @import "blocks/form.less";
+@import "blocks/map.less";
+@import "blocks/video.less";
 
 html {
   box-sizing: border-box;
