Выравнивание по макету, адаптивность

--- a/source/less/blocks/advantage-text.less
+++ b/source/less/blocks/advantage-text.less
@@ -14,8 +14,8 @@
 .advantage-text__number {
   font-size: 14px;
   margin: 0;
-  padding-top: 15px;
-  padding-bottom: 24px;
+  padding-top: 10px;
+  padding-bottom: 19px;
   position: relative;
 }
 
@@ -24,8 +24,7 @@
   line-height: 21px;
   margin: 0;
 
-  &--road,
-  &--tourists {
+  &--road {
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -33,58 +32,98 @@
 
 @media (min-width: @tablet-width) {
   .advantage-text__title {
+    font-size: 21px;
     padding-top: 0;
     padding-right: 17px;
-    padding-left: 16px;
+    padding-left: 23px;
 
     &--city {
       padding-top: 0;
     }
 
     &--tourists {
-      padding-left: 25px;
-      padding-right: 25px;
+      padding-left: 38px;
+      padding-right: 30px;
     }
 
     &--bridge {
-      padding-left: 38px;
-      padding-right: 38px;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
   .advantage-text__intro {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 13px;
+    padding-right: 7px;
+
+    &--bridge {
+      padding-left: 30px;
+      padding-right: 24px;
+    }
 
     &--road,
-    &--bridge {
-      padding-left: 15px;
-      padding-right: 15px;
+    &--tourists {
+      padding-left: 30px;
+      padding-right: 24px;
     }
+
+    &--city {
+      padding-left: 7px;
+    }
+  }
+
+  .advantage-text__number {
+    padding-top: 12px;
+    padding-bottom: 23px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .advantage-text__title {
-    padding-right: 100px;
-    padding-left: 100px;
+    padding-right: 105px;
+    padding-left: 105px;
+
+    &--area {
+      padding-right: 130px;
+      padding-left: 130px;
+    }
 
     &--road {
-      padding-right: 5px;
-      padding-left: 5px;
+      padding-right: 130px;
+      padding-left: 130px;
+    }
+
+    &--tourists {
+      padding-right: 130px;
+      padding-left: 130px;
+    }
+
+    &--bridge {
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
   .advantage-text__intro {
-    &--city,
-    &--road {
-      padding-right: 10px;
-      padding-left: 10px;
+    &--city {
+      padding-right: 25px;
+      padding-left: 25px;
     }
 
     &--bridge {
-      padding-right: 30px;
-      padding-left: 30px;
+      padding-right: 70px;
+      padding-left: 70px;
+    }
+
+    &--road {
+      padding-right: 65px;
+      padding-left: 65px;
+    }
+
+    &--tourists,
+    &--area {
+      padding-right: 40px;
+      padding-left: 40px;
     }
   }
 }
