--- a/source/less/blocks/book.less
+++ b/source/less/blocks/book.less
@@ -1,5 +1,5 @@
 .book__form {
-  padding-top: 32px;
+  padding-top: 28px;
   padding-bottom: 50px;
   text-align: center;
 }
@@ -14,7 +14,7 @@
 .book__action {
   font-size: 14px;
   line-height: 24px;
-  padding: 30px 20px 40px;
+  padding: 19px 20px 35px;
   margin: 0;
 }
 
@@ -27,13 +27,17 @@
 }
 
 @media (min-width: @tablet-width) {
+  .book__form {
+    padding-top: 54px;
+    padding-bottom: 58px;
+  }
+
   .book__title {
     font-size: 30px;
   }
 
   .book__action {
-    padding-right: 100px;
-    padding-left: 100px;
+    padding: 32px 100px 41px;
   }
 
   .book__break {
@@ -45,5 +49,10 @@
   .book__action {
     padding-right: 370px;
     padding-left: 370px;
+    padding-bottom: 47px;
+  }
+
+  .book__form {
+    padding-bottom: 67px;
   }
 }
