--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -2,12 +2,13 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
-  padding: 40px 32px 32px;
+  padding: 39px 30px 27px 28px;
   margin: 0;
 }
 
 .description__img {
   height: 390px;
+  background-color: #e6f0f6;
   background-size: 280px auto, 100%, auto;
   background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
   background-position: center, bottom, center;
@@ -16,9 +17,10 @@
 
 .description__img-photo {
   height: 158px;
-  background-size: 280px auto, 100%, auto;
+  background-color: #e6f0f6;
+  background-size: 228px, 100%, auto;
   background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
-  background-position: center, bottom, bottom;
+  background-position: 50% 44%, bottom, bottom;
   background-repeat: no-repeat;
 }
 
@@ -30,18 +32,20 @@
   .description__img {
     height: 518px;
     background-image: url("../img/text-sedona-index.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-tablet@1x.jpg");
-    background-size: 458px auto, 100%, 100%;
+    background-size: 457px auto, 100%, 100%;
+    background-position: 50% 47%, bottom, center;
   }
 
   .description__main {
-    padding: 52px 164px 38px;
+    padding: 52px 164px 27px;
+    font-size: 21px;
   }
 
   .description__img-photo {
     height: 290px;
     background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-mobile@1x.jpg");
     background-size: 458px auto, 100%, 130%;
-    background-position: center, bottom, bottom;
+    background-position: 50% 45%, bottom, bottom;
   }
 }
 
@@ -53,7 +57,7 @@
   }
 
   .description__main {
-    padding: 52px 382px 36px;
+    padding: 52px 382px 28px;
   }
 
   .description__img-photo {
