--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -3,7 +3,7 @@
   line-height: 26px;
   font-weight: bold;
   text-align: center;
-  padding-top: 41px;
+  padding-top: 40px;
   margin: 0;
 }
 
@@ -12,7 +12,7 @@
   line-height: 24px;
   text-align: center;
   font-weight: 400;
-  padding-top: 36px;
+  padding-top: 24px;
   padding-bottom: 22px;
   border-bottom: 1px solid #d6d6d6;
   margin: 0;
@@ -21,7 +21,7 @@
 .form__unit {
   border: none;
   border-bottom: 1px solid #d6d6d6;
-  padding: 0 20px 25px;
+  padding: 0 20px 30px;
   margin: 0;
 
   & input {
@@ -34,7 +34,15 @@
   }
 
   &--introduction > div {
-    padding-top: 20px;
+    padding-top: 14px;
+  }
+
+  &--introduction > div:nth-child(3) {
+    padding-top: 19px;
+  }
+
+  &--introduction > div:nth-child(4) {
+    padding-top: 21px;
   }
 
   &--emotion {
@@ -48,17 +56,36 @@
   }
 }
 
-.form__filling > div {
-  border-bottom: none;
+.form__unit--imprassion .form__title {
+  padding-top: 17px;
+}
+
+.form__unit--sight .form__title {
+  padding-top: 31px;
+}
+
+.form__unit--emotion .form__title {
+  padding-top: 17px;
+}
+
+
+.form__filling {
+  padding-bottom: 38px;
+
+  & > div {
+    border-bottom: none;
+  }
 }
 
 .form__title {
-  padding-top: 24px;
+  padding-top: 14px;
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
   text-align: center;
   padding-bottom: 6px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .form__introduction {
@@ -77,6 +104,10 @@
   padding-right: 13px;
 }
 
+.form__introduction--introduction:nth-child(4) label {
+  padding-right: 18px;
+}
+
 .form__field {
   height: 58px;
   background-color: #f2f2f2;
@@ -88,6 +119,7 @@
     font-size: 18px;
     line-height: 26px;
     font-weight: bold;
+    align-items: center;
   }
 
   &:hover {
@@ -106,7 +138,7 @@
   align-items: flex-start;
 
   & label {
-    padding-top: 20px;
+    padding-top: 15px;
     padding-left: 22px;
   }
 }
@@ -114,7 +146,7 @@
 .form__contact-wrapper {
   display: flex;
   flex-direction: row;
-  padding-top: 15px;
+  padding-top: 7px;
   width: 100%;
 }
 
@@ -136,8 +168,8 @@
   & + label::before {
     content: "";
     position: absolute;
-    left: -75px;
-    top: -19px;
+    left: -78px;
+    top: -15px;
     width: 55px;
     height: 55px;
     background-color: #f2f2f2;
@@ -150,8 +182,8 @@
   &--radio + label::after {
     content: "";
     position: absolute;
-    left: -58px;
-    top: -4px;
+    left: -61px;
+    top: 0;
     width: 22px;
     height: 22px;
     border-radius: 50%;
@@ -162,8 +194,8 @@
   &--checkbox + label::after {
     content: "";
     position: absolute;
-    left: -58px;
-    top: 0;
+    left: -61px;
+    top: 5px;
     width: 24px;
     height: 18px;
     background-image: url("../../img/icon-tick.svg");
@@ -186,7 +218,7 @@
   }
 
   &:active + label::after {
-    opacity: 0.6;
+    opacity: 0.3;
   }
 }
 
@@ -196,10 +228,10 @@
 }
 
 .form__text-field {
-  padding: 20px;
+  padding: 16px 20px;
   background-color: #f2f2f2;
-  margin-top: 14px;
-  margin-bottom: 26px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   border: none;
   box-sizing: border-box;
   width: 100%;
@@ -241,20 +273,20 @@
 }
 
 .form__impression {
-  padding-top: 51px;
+  padding-top: 43px;
   padding-left: 78px;
 
   &:first-child {
-    padding-top: 41px;
+    padding-top: 32px;
   }
 }
 
 .form__sight {
-  padding-top: 64px;
+  padding-top: 54px;
   padding-left: 78px;
 
   &:first-child {
-    padding-top: 41px;
+    padding-top: 25px;
   }
 }
 
@@ -264,6 +296,18 @@
 }
 
 @media (min-width: @tablet-width) {
+  .form__main-title {
+    font-size: 30px;
+    line-height: 30px;
+    padding-top: 74px;
+  }
+
+  .form__title {
+    font-size: 21px;
+    line-height: 26px;
+    padding-left: 0;
+  }
+
   .form__filling {
     display: flex;
     flex-wrap: wrap;
@@ -271,19 +315,19 @@
     padding-right: 60px;
   }
 
-
   .form__unit {
     padding-right: 0;
     padding-left: 0;
 
     &--introduction {
       order: 2;
-      flex-grow: 2;
-      width: 40%;
+      // flex-grow: 2;
+      width: 50%;
       border-bottom: none;
-      padding-bottom: 73px;
+      padding-bottom: 69px;
       padding-left: 58px;
       padding-right: 0;
+      box-sizing: border-box;
 
       & .form__title {
         text-align: start;
@@ -296,21 +340,20 @@
       width: 100%;
       border-top: 1px solid #d6d6d6;
       border-bottom: none;
-      padding-bottom: 56px;
+      padding-bottom: 53px;
 
       & .form__title {
         padding: 0 63px;
       }
 
       & label {
-        padding-top: 35px;
+        padding-top: 25px;
       }
     }
 
     &--imprassion {
       order: 1;
-      flex-grow: 2;
-      width: 40%;
+      width: 50%;
       border-bottom: none;
       padding-left: 0;
       padding-right: 0;
@@ -325,7 +368,7 @@
       flex-grow: 1;
       border-top: 1px solid #d6d6d6;
       border-bottom: none;
-      padding-bottom: 90px;
+      padding-bottom: 84px;
 
       & .form__title {
         padding: 0 63px;
@@ -347,6 +390,7 @@
   .form__title-description {
     border: none;
     padding-bottom: 59px;
+    padding-top: 26px;
   }
 
   .form__break {
@@ -355,9 +399,9 @@
 
   .form__button {
     padding-left: 0;
-    padding-right: 0;
     width: auto;
     min-width: 324px;
+    padding-right: 11px;
   }
 
   .form__coment {
@@ -372,7 +416,7 @@
   .form__button-wrapper {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 61px;
+    padding-bottom: 22px;
 
     & input {
       flex-grow: 0;
@@ -380,11 +424,9 @@
   }
 
   .form__sight-wrapper {
-    // padding-top: 45px;
     display: flex;
     flex-wrap: wrap;
-    padding-left: 96px;
-    padding-right: 96px;
+    padding-left: 67px;
     justify-content: center;
 
     & li {
@@ -393,35 +435,46 @@
   }
 
   .form__sight {
-    padding-top: 64px;
+    padding-top: 62px;
     flex-basis: 32%;
 
-    &:first-child {
-      padding-top: 64px;
+    &:nth-child(-n+2) {
+      padding-top: 56px;
     }
   }
 
   .form__text-field {
-    margin: 61px 0 25px;
+    margin: 57px 0 27px;
   }
 
   .form__unit--introduction > div:first-of-type {
     padding-top: 55px;
   }
 
-  .form__impression:first-child {
-    padding-top: 70px;
+  .form__impression {
+    padding-top: 52px;
+
+    &:first-child {
+      padding-top: 66px;
+    }
   }
 }
 
 @media (min-width: @desktop-width) {
+  .form__title-description {
+    padding-bottom: 44px;
+  }
+
   .form__button {
     min-width: 480px;
+    padding-left: 17px;
+    padding-right: 13px;
   }
 
   .form__filling {
     padding-left: 120px;
     padding-right: 120px;
+    padding-bottom: 42px;
   }
 
   .form__contact-hide {
@@ -449,15 +502,35 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding-top: 77px;
+    padding-top: 74px;
   }
 
   .form__field {
     min-width: 257px;
   }
 
-  .form__unit--contact label {
-    padding-top: 0;
+  .form__unit {
+    &--contact label {
+      padding-top: 0;
+    }
+
+    &--imprassion .form__title {
+      padding-right: 45px;
+      text-align: center;
+    }
+
+    &--introduction {
+      padding-left: 81px;
+      padding-bottom: 66px;
+    }
+
+    &--contact {
+      padding-bottom: 53px;
+    }
+
+    &--sight {
+      padding-bottom: 83px;
+    }
   }
 
   .form__main-title {
@@ -469,15 +542,22 @@
     font-size: 21px;
   }
 
-  .form__unit--imprassion {
-    & .form__title {
-      text-align: center;
-    }
-  }
-
   .form__sight-wrapper {
     padding-right: 0;
     padding-left: 0;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .form__sight {
+    flex-basis: auto;
+
+    &:nth-child(n) {
+      padding-top: 56px;
+    }
+  }
+
+  .form__impression {
+    padding-left: 82px;
   }
 }
