--- a/source/less/blocks/photo-view.less
+++ b/source/less/blocks/photo-view.less
@@ -5,26 +5,24 @@
   margin: 0;
 }
 
-.photo-view__title,
+.photo-view__title {
+  font-weight: bold;
+  padding-top: 15px;
+}
+
 .photo-view__like {
   font-weight: bold;
+  font-size: 14px;
+  line-height: 21px;
+  margin: 0;
+  padding-bottom: 17px;
+  padding-left: 36px;
+  position: relative;
 }
 
 .photo-view__autor {
   text-transform: none;
-  padding-bottom: 8px;
-}
-
-.photo-view__title {
-  padding-top: 18px;
-  padding-bottom: 4px;
-}
-
-.photo-view__like {
-  margin: 0;
-  padding-bottom: 22px;
-  padding-left: 37px;
-  position: relative;
+  padding-bottom: 10px;
 }
 
 .photo-view__img {
@@ -64,11 +62,28 @@
   .photo-view__caption {
     background-color: #f2f2f2;
     display: flex;
-    justify-content: space-between;
-    padding: 22px 20px;
+    padding: 16px 20px;
     align-items: center;
     margin-left: 0;
     margin-right: 0;
+  }
+
+  .photo-view__caption-autor {
+    width: 87%;
+
+    &--first-child {
+      width: 95%;
+    }
+  }
+
+  .photo-view__like {
+    width: 13%;
+    padding-bottom: 0;
+    padding-left: 33px;
+
+    &--first-child {
+      width: 5%;
+    }
   }
 
   .photo-view__title {
@@ -77,10 +92,6 @@
 
   .photo-view__autor {
     padding: 0;
-  }
-
-  .photo-view__like {
-    padding-bottom: 0;
   }
 
   .photo-view__img {
@@ -106,12 +117,12 @@
     position: relative;
   }
 
-  .photo-view__img--sunset {
-    height: auto;
-    min-width: 1200px;
-  }
-
   .photo-view__img {
+    &--sunset {
+      height: auto;
+      min-width: 1200px;
+    }
+
     &--flora,
     &--road,
     &--bridge {
@@ -132,5 +143,21 @@
 
   .photo-view__like-icon {
     fill: #ffffff;
+  }
+
+  .photo-view__caption-autor {
+    width: 90%;
+
+    &--first-child {
+      width: 97%;
+    }
+  }
+
+  .photo-view__like {
+    width: 10%;
+
+    &--first-child {
+      width: 3%;
+    }
   }
 }
