--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,7 +1,7 @@
 .social__list {
   padding: 0;
   margin: 0;
-  padding-bottom: 40px;
+  padding-bottom: 34px;
   display: flex;
   justify-content: space-between;
 }
@@ -18,6 +18,10 @@
 
   &:active {
     background-color: #5496bd;
+  }
+
+  & a:focus svg {
+    outline: 1px solid #dbbd83;
   }
 }
 
