--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -218,8 +218,7 @@
   }
 
   .video__setting {
-    left: 200px;
-    right: 200px;
+    left: calc(50% - 400px);
     width: 800px;
     position: absolute;
   }
