--- a/source/less/blocks/point-list.less
+++ b/source/less/blocks/point-list.less
@@ -53,10 +53,14 @@
   .point-list__text {
     padding-top: 20px;
 
-    &--house,
-    &--food {
+    &--house {
       padding-left: 0;
       padding-right: 0;
+    }
+
+    &--food {
+      padding-left: 3px;
+      padding-right: 3px;
     }
   }
 
