--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -37,7 +37,7 @@
   }
 
   .description__main {
-    padding: 52px 164px 27px;
+    padding: 52px 155px 27px;
     font-size: 21px;
   }
 
@@ -46,6 +46,10 @@
     background-image: url("../img/text-sedona.svg"), url("../img/bg-intro-triangle-tablet.svg"), url("../img/bg-back-mobile@1x.jpg");
     background-size: 458px auto, 100%, 130%;
     background-position: 50% 45%, bottom, bottom;
+  }
+
+  .description__break {
+    display: none;
   }
 }
 
@@ -57,7 +61,7 @@
   }
 
   .description__main {
-    padding: 52px 363px 28px;
+    padding: 50px 363px 28px;
   }
 
   .description__img-photo {
