--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -17,10 +17,6 @@
     background-color: #5496bd;
   }
 
-  &:active a {
-    color: rgba(255, 255, 255, 0.3);
-  }
-
   &--main {
     padding-top: 6px;
     padding-bottom: 8px;
@@ -40,7 +36,13 @@
     padding-top: 8px;
     padding-bottom: 5px;
   }
+
+  & a:active {
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
+
+// .site-list__item
 
 .site-list__item:nth-child(4) {
   box-shadow: inset 0 -10px 10px -8px rgba(0, 0, 0, 0.4);
