--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -13,12 +13,11 @@
 }
 
 .advantage__point {
-  // display: flex;
-  // flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
   padding-left: 69px;
   padding-bottom: 38px;
   margin: auto;
-  max-width: 450px;
 }
 
 .advantage__description {
